--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "faker": "npm:Faker@^0.7.2",
     "mysql2": "^3.1.0",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "Faker": "^0.7.2",
     "sequelize-cli": "^6.6.0"
   }
 }
