--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,25 @@
 services:
   - type: web
-      name: my blog
-      env: node
-      buildCommand: npm run build
-      staticPublishPath: ./build
-      pullRequestPreviewsEnabled: true # optional
-      buildFilter:
-        paths:
-        - app/server.js 
-        ignoredPaths:
-        - src/**/*.test.js
-      headers:
-        - path: /*
-          name: X-Frame-Options
-          value: sameorigin
-      routes:
-        - type: redirect
-          source: /old
-          destination: /new
-        - type: rewrite
-          source: /a/*
-          destination: /a
+    name: pruebaAlejandro
+    env: node
+    plan: free
+    buildCommand:
+      npx sequelize-cli db:drop &&
+      npx sequelize-cli db:create &&
+      npx sequelize-cli db:migrate &&
+      npx sequelize-cli db:seed:all &&
+      npm run build
+    startCommand: npm run dev
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: DATABASE_URL
+        fromDatabase:
+          name: DB_DATABASE
+          property: connectionString
+      - key: SESSION_SECRET_KEY
+        generateValue: true
+
+databases:
+  - name: DB_DATABASE
+    plan: free
