--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "faker": "npm:Faker@^0.7.2",
     "mysql2": "^3.1.0",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
